--- a/BrainGame.csproj
+++ b/BrainGame.csproj
@@ -297,13 +297,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Anagram\Anagram.cs" />
-    <Compile Include="Assets\Scripts\Anagram\Program.cs" />
-    <Compile Include="Assets\Scripts\Ball.cs" />
-    <Compile Include="Assets\Scripts\BoardManager.cs" />
-    <Compile Include="Assets\Scripts\CreateGames4.cs" />
+    <Compile Include="Assets\Scripts\AnagramScript\Anagram.cs" />
     <Compile Include="Assets\Scripts\FlexibleScript\Flexible.cs" />
-    <Compile Include="Assets\Scripts\FlexibleScript\FlexibleManager.cs" />
+    <Compile Include="Assets\Scripts\GlobalData.cs" />
+    <Compile Include="Assets\Scripts\PatternScript\Ball.cs" />
+    <Compile Include="Assets\Scripts\PatternScript\PatternMatch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
