--- a/BrainGame.csproj
+++ b/BrainGame.csproj
@@ -14,6 +14,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
+    <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>2017.3.1f1</UnityVersion>
@@ -300,6 +301,7 @@
     <Compile Include="Assets\Scripts\AnagramScript\Anagram.cs" />
     <Compile Include="Assets\Scripts\FlexibleScript\Flexible.cs" />
     <Compile Include="Assets\Scripts\GlobalData.cs" />
+    <Compile Include="Assets\Scripts\Insert.cs" />
     <Compile Include="Assets\Scripts\PatternScript\Ball.cs" />
     <Compile Include="Assets\Scripts\PatternScript\PatternMatch.cs" />
   </ItemGroup>
