--- a/BrainGame-master.csproj
+++ b/BrainGame-master.csproj
@@ -13,12 +13,14 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>2017.3.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -352,7 +354,6 @@
     <Compile Include="Assets\Scripts\FlexibleScript\Daftar.cs" />
     <Compile Include="Assets\Scripts\FlexibleScript\Flexible.cs" />
     <Compile Include="Assets\Scripts\FlexibleScript\Opening.cs" />
-    <Compile Include="Assets\Scripts\GlobalData.cs" />
     <Compile Include="Assets\Scripts\OverScript.cs" />
     <Compile Include="Assets\Scripts\PatternScript\Ball.cs" />
     <Compile Include="Assets\Scripts\PatternScript\PatternMatch.cs" />
